--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Listas de Receitas</h1>
     <br>
     <h2>Bolo de cenoura com cobertura de chocolate</h2>
-    <img src="imagens/bolo-400.jpg" alt="Bolo de cenoura com cobertura de chocolate">
+    <img src="bolo-400.jpg" alt="Bolo de cenoura com cobertura de chocolate">
     <h3><strong>Ingredientes</strong></h3>
     <ol type="a">
         <li>Para o bolo:</li>
@@ -57,7 +57,7 @@
     <p><strong>Este bolo de cenoura com cobertura de chocolate é uma delícia! Espero que goste!</strong></p>
     <br>
     <h2>Cachorro-quente</h2>
-    <img src="imagens/hotdog-400.jpg" alt="Cachorro-quente">
+    <img src="hotdog-400.jpg" alt="Cachorro-quente">
     <h3><strong>Ingredientes</strong></h3>
     <ul type="square">
         <li>4 salsichas</li>
